# InteriorDesign

./: Design.py  Experiment.ipynb  ML System Design Doc  ML System Design Doc.md  README.md  Room_generator_trial_stable_diffusion_ipynb_.ipynb  Sentence_transformers.ipynb  content_and_elements_jaccard_comparison.ipynb  content_and_elements_jaccard_comparison.py  dataloader.ipynb  failed_text2room_test.ipynb  interior_design_renovation.ipynb  interior_design_renovation.py  labelled_bedrooms_data_sample.txt  similarity of vectors.ipynb  synonyms_for_user_input.ipynb  synonyms_for_user_input.py  w2v_based_on_dataset.ipynb
desktop_app_version_0/: README.md  app.py  data_loader.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  similarities.py
desktop_app_version_0/labelled_data/: labelled_bedrooms_data_sample.txt.txt  labelled_dining_data_sample.txt.txt  labelled_kitchens_data_sample.txt.txt  labelled_living_rooms_data_sample.txt.txt
desktop_app_version_0/static/: app.html
labelled_data/: labelled_bathrooms_data_sample.txt.txt  labelled_living_rooms_data_sample.txt.txt
