[tool.poetry]
name = "Interior Design"
version = "0.1.0"
description = ""
authors = ["Anna Leites, Victor Pakholkov"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "3.7.2"
numpy = "1.26.1"
nltk = "3.8.1"
python-multipart = "0.0.6"
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
